✨ added getUserTotalAmountSpendAtDate